password reset template

--- a/utils/templates/email/passwordreset-email.html
+++ b/utils/templates/email/passwordreset-email.html
@@ -67,7 +67,7 @@
                       style="border-radius: 6px; text-align: center"
                     >
                       <a
-                        href="{{appUrl}}/reset-password?token={{token}}"
+                        href="{{appUrl}}/reset-password?token={{token}}&lang={{lang}}"
                         target="_blank"
                         style="
                           display: inline-block;
@@ -94,10 +94,10 @@
                   style="word-break: break-all; font-size: 14px; color: #007bff"
                 >
                   <a
-                    href="{{appUrl}}/reset-password?token={{token}}"
+                    href="{{appUrl}}/reset-password?token={{token}}&lang={{lang}}"
                     style="color: #007bff; text-decoration: none"
                   >
-                    {{appUrl}}/reset-password?token={{token}}
+                    {{appUrl}}/reset-password?token={{token}}&lang={{lang}}
                   </a>
                 </p>
               </td>
@@ -109,7 +109,7 @@
               >
                 You’re receiving this because you requested a password reset for
                 PAiMO.<br />
-                &copy; ${new Date().getFullYear()} PAiMO. All rights reserved.
+                &copy; {{year}} PAiMO. All rights reserved.
               </td>
             </tr>
           </table>
